--- a/template/addjobs.html
+++ b/template/addjobs.html
@@ -1,4 +1,8 @@
 <div class="container">
+	<button class="btn btn-success"><a href="/platform/addjobs" style="color:white">添加职位</a></button>
+	<button class="btn btn-success"><a href="/platform/getjobs" title="获取职位" style="color:white">获取职位</a></button>
+	<button class="btn btn-success"><a href="/platform/reviseJob" title="修改职位" style="color:white">修改职位</a></button>
+	<div class="clear"></div>
 	<p class="should">watching model:</p>
     <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
     Select File:
