--- a/template/getSiteInfo.html
+++ b/template/getSiteInfo.html
@@ -1,3 +1,7 @@
+<div class="container" style="margin-bottom:30px">
+    <button type="button" class="btn btn-success"><a href="/platform/addSiteInfo" style="color:white">添加场地信息</a></button>
+    <button type="button" class="btn btn-success"><a href="/platform/getSiteInfo" style="color:white">获取场地信息</a></button>
+</div>
 <div class="getSiteInfo container">
 	<div class="getsite">
 		<label>输入地址</label>
