--- a/template/jobsList.html
+++ b/template/jobsList.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fulid">
 	<form  name="jobsList" novalidate ng-submit="reviseJobs(job)">
 		<p class="should">watching model:</p>
     	<div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
@@ -16,4 +16,5 @@
 		</div>
 		<button type="submit" class="try_fix btn btn-default" >确认修改</button>
 	</form>
+	<div class="clear"></div>
 </div>
