--- a/template/getjobs.html
+++ b/template/getjobs.html
@@ -1,4 +1,8 @@
 <div class="container">
+	<button class="btn btn-success"><a href="/platform/addjobs" style="color:white">添加职位</a></button>
+	<button class="btn btn-success"><a href="/platform/getjobs" title="获取职位" style="color:white">获取职位</a></button>
+	<button class="btn btn-success"><a href="/platform/reviseJob" title="修改职位" style="color:white">修改职位</a></button>
+	<div class="clear"></div>
 	<div class="jobList">
 		<job-list ng-repeat="(key,job) in jobList" ></job-list>
 	</div>
