--- a/template/menu.html
+++ b/template/menu.html
@@ -11,12 +11,9 @@
 		</div>
 		<nav class="collapse navbar-collapse bs-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/platform/checkInit" title="初始化" >初始化</a></li>
-				<li><a href="/platform/addSiteInfo" title="添加场地信息">添加场地信息</a></li>
-				<li><a href="/platform/getSiteInfo" title="获取场地信息">获取场地信息</a></li>
-				<li><a href="/platform/addjobs" title="添加职位">添加职位</a></li>
-				<li><a href="/platform/getjobs" title="获取职位">获取职位</a></li>
-				<li><a href="/platform/reviseJob" title="修改职位">修改职位</a></li>
+				<li style="display:none"><a href="/platform/checkInit" title="初始化" >初始化</a></li>
+				<li><a href="/platform/addSiteInfo" title="场地信息">场地信息</a></li>
+				<li><a href="/platform/addjobs" title="职位相关">职位相关</a></li>
 				<li><a href="/platform/LookTest" title="查看测试人员">查看测试人员</a></li>
 				<li><a href="/platform/searchUser" title="寻找用户">寻找用户</a></li>
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
