--- a/template/testView.html
+++ b/template/testView.html
@@ -2,6 +2,6 @@
 	<div class="testView">
 		<test-view ng-repeat="(key,tester) in testerList"></test-view>
 	</div>
-	<button class="btn btn-primary btn-lg"  ng-click="getMoreView('pre')" ng-disabled="firstPage"> 上一页</button>
-	<button class="btn btn-primary btn-lg"  ng-click="getMoreView('next')" ng-disabled="lastPage"> 下一页</button>
+	<button class="btn btn-success btn-lg"  ng-click="getMoreView('pre')" ng-disabled="firstPage"> 上一页</button>
+	<button class="btn btn-success btn-lg"  ng-click="getMoreView('next')" ng-disabled="lastPage"> 下一页</button>
 </div>
