--- a/template/menu.html
+++ b/template/menu.html
@@ -21,7 +21,7 @@
 				<li><a href="/platform/manageUser" title="管理员选项">管理员选项</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-		        <li><a href="/platform/login">{{login}}</a></li>
+		        <li><a ng-href="{{myhref}}">{{login}}</a></li>
 		     </ul>
 		</nav>
 	</div>
