--- a/template/menu.html
+++ b/template/menu.html
@@ -18,7 +18,7 @@
 				<li><a href="/platform/searchUser" title="寻找用户">寻找用户</a></li>
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
 				<li><a href="/platform/addDriveSchool" title="驾校管理">驾校管理</a></li>
-				<li><a href="/platform/manageUser" title="管理员选项">管理员选项</a></li>
+				<li><a href="/platform/manageUser" title="管理员选项">平台管理员</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 		        <li><a ng-href="{{myhref}}">{{login}}</a></li>
