--- a/template/imuserList.html
+++ b/template/imuserList.html
@@ -1,50 +1,53 @@
-<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser._id}}</button>
-<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser.createDate}}</button>
-<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser.userId}}</button>
-<div class="container" ng-controller="examineNews">
-	<button ng-click="examines(imuser)" class="btn btn-warning" data-toggle="modal" data-target=".as-example-modal-lg" >审核教练</button>
-	<button ng-click="examineRefuseCoach(imuser)" class="btn btn-warning" data-toggle="modal" data-target=".bs-example-modal-lg" >拒绝审核教练</button>
-	<div class="clear"></div>
-	<div class="modal fade bs-example-modal-lg"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-	  <div class="modal-dialog modal-lg">
-	    <div class="modal-content">
-	    	<img ng-src="{{examine.urlCoach}}" width="33%" >
-	    	<img ng-src="{{examine.urlID}}" width="33%">
-	    	<img ng-src="{{examine.urlOther}}" width="33%">
-	      	<form name="reason_form" novalidate ng-show="showReason" style="margin-top:20px">
-	      		<label>拒绝原因</label>
-	      		<br>
-				<input  class="form-control"  ng-model="examine.resaon" style="float:left" class="form-control" />
-				<button type="submit" class="btn btn-success" ng-click="examineResaon()" style="float:left" >提交</button>
-			</form>
-			<div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+<div ng-controller="examineNews">
+	<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser._id}}</button>
+	<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser.createDate}}</button>
+	<button type="button" class="btn btn-default fixed_width" style="width:25%" >{{imuser.userId}}</button>
+	<div class="container" >
+		<button ng-click="examines(imuser)" class="btn btn-warning" data-toggle="modal" data-target="{{'.as-example-modal-lg-' + imuser.userId}}" >审核教练</button>
+		<button ng-click="examineRefuseCoach(imuser)" class="btn btn-warning" data-toggle="modal" data-target="{{'.bs-example-modal-lg-'+imuser.userId}}" >拒绝审核教练</button>
+		<div class="clear"></div>
+		<div class="{{'modal fade bs-example-modal-lg-'+imuser.userId}}"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		  <div class="modal-dialog modal-lg">
+		    <div class="modal-content">
+		    	<img ng-src="{{examine.urlCoach}}" width="33%" >
+		    	<img ng-src="{{examine.urlID}}" width="33%">
+		    	<img ng-src="{{examine.urlOther}}" width="33%">
+		      	<form name="reason_form" novalidate  style="margin-top:20px">
+		      		<label>拒绝原因</label>
+		      		<br>
+					<input  class="form-control"  ng-model="examine.resaon" style="float:left" class="form-control" />
+					<button type="submit" class="btn btn-success" ng-click="examineResaon()" style="float:left" >提交</button>
+				</form>
+				<div class="modal-footer">
+			        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+			    </div>
 		    </div>
-	    </div>
-	  </div>
-	</div>
-	<div class="modal fade as-example-modal-lg"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-	  <div class="modal-dialog modal-lg">
-	    <div class="modal-content">
-	    	<img ng-src="{{examine.urlCoacha}}" width="33%">
-	    	<img ng-src="{{examine.urlIDa}}" width="33%">
-	    	<img ng-src="{{examine.urlOthera}}" width="33%">
-	      	<form name="examine_form" novalidate ng-show="showExamine" style="margin-top:20px;margin-left:30px">
-				<lable>输入名字</lable>
-				<input type="text" ng-model="examine.name" required class="form-control" />
-				<lable>输入身份证</lable>
-				<input type="text" ng-model="examine.id" required class="form-control"   />
-				<lable>输入teachType</lable>
-				<input type="text" ng-model="examine.teachType" required  class="form-control"  />
-				<button type="submit" ng-click="examineCoach()" class="btn btn-success" >提交</button>
-			</form>
-			<div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+		  </div>
+		</div>
+		<div class="clear"></div>
+		<div class="{{'modal fade as-example-modal-lg-'+ imuser.userId}}"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		  <div class="modal-dialog modal-lg">
+		    <div class="modal-content">
+		    	<img ng-src="{{examine.urlCoacha}}" width="33%">
+		    	<img ng-src="{{examine.urlIDa}}" width="33%">
+		    	<img ng-src="{{examine.urlOthera}}" width="33%">
+		      	<form name="examine_form" novalidate style="margin-top:20px;margin-left:30px">
+					<lable>输入名字</lable>
+					<input type="text" ng-model="examine.name" required class="form-control" />
+					<lable>输入身份证</lable>
+					<input type="text" ng-model="examine.id" required class="form-control"   />
+					<lable>输入teachType</lable>
+					<input type="text" ng-model="examine.teachType" required  class="form-control"  />
+					<button type="submit" ng-click="examineCoach()" class="btn btn-success" >提交</button>
+				</form>
+				<div class="modal-footer">
+			        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
+			    </div>
 		    </div>
-	    </div>
-	  </div>
+		  </div>
+		</div>
 	</div>
-	
 </div>
+
 
 
