--- a/css/bootstrap/platform.css
+++ b/css/bootstrap/platform.css
@@ -306,3 +306,9 @@ from{transform:rotate(0deg)}
 .getManager{
 	margin-top: 30px;
 }
+.userNumber{
+	text-align: center;
+	position: absolute;
+	top:20%;
+	right: 1%;
+}
