--- a/template/jobList.html
+++ b/template/jobList.html
@@ -8,6 +8,6 @@
 		<p contentEditable=false ng-model="job.duty" class="single_p dis_pay" ></p>
 		<p class="form-control">{{job.pay}}</p>
 	</div>
-	<button type="button" class="glyphicon glyphicon-remove " ng-click="deleteJob(job.id)" ></button>
+	<button type="button" class="glyphicon glyphicon-remove " ng-click="deleteJob(job.id)" title="点击删除" ></button>
 </div>
 <div class="clear"></div>
