--- a/template/phoneByUser.html
+++ b/template/phoneByUser.html
@@ -14,9 +14,10 @@
 	<div class="getUsers" ng-controller="userItem">
 		<div class="clear"></div>
 		<div class="compline">
-			<button  type="button" class="btn btn-default btn-lg margin" style="width:25%">用户_id</button>
-			<button  type="button" class="btn btn-default btn-lg margin" style="width:25%">用户phone</button>
-			<button  type="button" class="btn btn-default btn-lg margin" style="width:25%">创建日期</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:20%">用户_id</button>
+			<button  type="button" class="btn btn-default btn-lg fixed_width" style="width:20%">用户</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:20%">用户phone</button>
+			<button  type="button" class="btn btn-default btn-lg margin" style="width:20%">创建日期</button>
 		</div>
 		<div class="clear"></div>
 		<user-item ng-repeat="(key,user) in userItem"></user-item>
