查看用户界面修改

--- a/css/bootstrap/platform.css
+++ b/css/bootstrap/platform.css
@@ -317,3 +317,7 @@ from{transform:rotate(0deg)}
 	height: auto;
 	/*margin:0 auto;*/
 }
+.backGroung{
+	background-color: #9ACD32 !important;
+	color: white
+}
