--- a/template/userItem.html
+++ b/template/userItem.html
@@ -1,45 +1,73 @@
+<div class="thumbnail  userNumber"><button type="button" class="btn btn-success"><h1>{{number}}</h1></button></div>
 <div class="clear"></div>
 <div class="data_detile">
-	<input type="text" class="btn btn-default fixed_width" style="width:20%" ng-model="user._id" ></input>
-	<input type="text" class="btn btn-default fixed_width" style="width:20%" ng-model="user.name" ></input>
-	<input type="text" class="btn btn-default fixed_width" style="width:20%" ng-model="user.phone" ></input>
-	<input type="text" class="btn btn-default fixed_width" style="width:20%" ng-model="user.createDate"></input>
+	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.id" ></input>
+	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.name" ></input>
+	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.phone" ></input>
+	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.createDate"></input>
+	<input type="text" class="btn btn-default fixed_width colorMust"  style="width:16%" ng-model="user.role" ng-class="{backGroung:user.role=='coach'}"></input>
 </div>
-<div ng-controller="fuckQiniu">
-	<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success"  >查看详情</button>
+<div ng-controller="fuckQiniu"><!-- style="display:none" -->
+	<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success">查看详情</button>
 	<div class="clear"></div>
 	<div class="photoList" ng-show="photoShow">
-		<small  ng-show="Download.coachUrl">驾驶证</small>
-		<img ng-src="{{Download.coachUrl}}" width="200" height="100" ng-show="Download.coachUrl"  class="zoom" >
-		<div class="addPhote" ng-show="!user.lisence || !user.lisence.drive">
+		<!-- <small  ng-show="Download.coachUrl">驾驶证</small>
+		<img ng-src="{{Download.coachUrl}}" width="200" height="100" ng-show="Download.coachUrl"  class="zoom" > -->
+		<!-- <div class="addPhote" ng-show="!user.lisence || !user.lisence.drive">
 			<small style="float:left">添加驾驶证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
 		    <div class="filechange" ngf-select ngf-change="upload($files,'drive')" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
-		</div>
-		<small ng-show="Download.driveUrl" >教练证</small>
-		<img ng-src="{{Download.driveUrl}}" width="200" height="100" ng-show="Download.driveUrl" class="zoom" >
-		<div class="addPhote" ng-show="!user.lisence || !user.lisence.coach">
+		</div> -->
+		<!-- <small ng-show="Download.driveUrl" >教练证</small>
+		<img ng-src="{{Download.driveUrl}}" width="200" height="100" ng-show="Download.driveUrl" class="zoom" > -->
+		<!-- <div class="addPhote" ng-show="!user.lisence || !user.lisence.coach">
 			<small style="float:left">添加教练证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
 		    <div class="filechange" ngf-select ngf-change="upload($files,'coach')" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
-		</div>
-		<small ng-show="Download.identityUrl" >身份证</small>
-		<img ng-src="{{Download.identityUrl}}" width="200" height="100" ng-show="Download.identityUrl" class="zoom">
-		<div class="addPhote" ng-show="!user.lisence || !user.lisence.identity">
+		</div> -->
+		<!-- <small ng-show="Download.identityUrl" >身份证</small>
+		<img ng-src="{{Download.identityUrl}}" width="200" height="100" ng-show="Download.identityUrl" class="zoom"> -->
+		<!-- <div class="addPhote" ng-show="!user.lisence || !user.lisence.identity">
 			<small style="float:left" >添加身份证</small>
 			<p class="should">watching model:</p>
 		    <div class="button should" ngf-select ng-model="files" ngf-multiple="multiple">Select File</div>
 		    <div class="filechange" ngf-select ngf-change="upload($files,'identity')" ngf-multiple="multiple" style="float:left">Select File</div>
 			<p class="should">Upload Log:</p>
 			<pre class="should">{{log}}</pre>
+		</div> -->
+		<div class="data_detile" style="width:90%;margin:0 auto" ng-show="roleCoach">
+			<button type="text" class="btn btn-default fixed_width" style="width:16%"  >驾校</button>
+			<button type="text" class="btn btn-default fixed_width" style="width:16%"  >训练场地</button>
+			<button type="text" class="btn btn-default fixed_width" style="width:10%" >教学类型</button>
+			<button type="text" class="btn btn-default fixed_width" style="width:10%" >拿驾照日期</button>
+			<button type="text" class="btn btn-default fixed_width" style="width:10%" >学员数量</button>
+			<button type="text" class="btn btn-default fixed_width" style="width:18%" >已传证件</button>
+			<br>
+			<div class="clear"></div>
+			<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="use.Dname" ></input>
+			<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="use.Dsite" ></input>
+			<input type="text" class="btn btn-default fixed_width" style="width:10%" ng-model="use.teachType" ></input>
+			<input type="text" class="btn btn-default fixed_width" style="width:10%" ng-model="use.coachLisenceDate"></input>
+			<input type="text" class="btn btn-default fixed_width" style="width:10%" ng-model="use.studentNum"></input>
+			<input type="text" class="btn btn-default fixed_width" style="width:18%" ng-model="use.photo"></input>
+		</div>
+		<div class="data_detile" style="width:40%;margin-left:20%" ng-show="roleStutent">
+			<button type="text" class="btn btn-default fixed_width" style="width:50%">已绑定的教练</button>
+			<input type="text" class="btn btn-default fixed_width" style="width:50%" ng-model="use.coach" ></input>
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	// var role=$scope.user.role;
+	// if(role == "coach"){
+	// 	$(".colorMust").css("background-color","#D3D3D3")
+	// }
+</script>
 
 
