--- a/template/userItem.html
+++ b/template/userItem.html
@@ -12,8 +12,8 @@
 <div ng-controller="fuckQiniu" ng-show="user.role == 'coach'">
 	<button type="submit" ng-click="postIdCardF(user)" class="btn btn-success" data-toggle="modal" data-target="{{'.bs-example-modal-lg-' + user.id}}" >查看详情</button>
 	<div class="clear"></div>
-	<div class="{{'modal fade bs-example-modal-lg-'+user.id}}" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
+	<div class="{{'modal fade bs-example-modal-lg-'+user.id}}"  role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-lg " >
 		    <div class="modal-content">
 		    	<p style="width:100%;font-size:24px;text-align:center;padding-top:24px;padding-bottom:24px">{{user.name}}教练</p>
 		    	<div class="data_detile" style="width:100%;margin:0 auto" >
@@ -33,6 +33,10 @@
 					<input type="text" class="btn btn-default fixed_width" style="width:18%" ng-model="use.photo"></input>
 				</div>
 				<div class="clear"></div>
+				<!-- 显示活跃度的div -->
+				<!-- do something -->
+				<div id="main" style="height:400px;width:100%;"  zhe-xian></div>
+				<div class="clear"></div>
 				<p style="font-size:20px;padding:1em 1em 1em 1em">学员列表</p>
 				<div class="compline">
 					<button  type="button" class="btn btn-default btn-lg margin" style="width:20%">用户id</button>
@@ -43,8 +47,6 @@
 				</div>
 				<student-list ng-repeat="(key,student)  in studentList"></student-list>
 				<div class="clear"></div>
-				<!-- 显示活跃度的div -->
-				<!-- do something -->
 				<div class="modal-footer">
 			        <button type="button" class="btn btn-default" data-dismiss="modal" style="float:right">Close</button>
 			    </div>
@@ -89,5 +91,4 @@
 		<p class="should">Upload Log:</p>
 		<pre class="should">{{log}}</pre>
 	</div> -->
-
 
