解决搜索用户时出现两个模态框的问题

--- a/template/phoneByUser.html
+++ b/template/phoneByUser.html
@@ -8,7 +8,7 @@
 	<div class="clear"></div>
 	<div class="PhoneUser" ng-show="phone" ng-controller="fuckQiniu">
 		<h2  class="phone_user" >该手机对应的用户为:</h2>
-		<user-item></user-item>
+		<use-item></use-item>
 	</div>
 	<div class="getUsers" ng-controller="userItem">
 		<div class="getDiff">
