绘制折线图

--- a/css/bootstrap/platform.css
+++ b/css/bootstrap/platform.css
@@ -321,3 +321,13 @@ from{transform:rotate(0deg)}
 	background-color: #9ACD32 !important;
 	color: white
 }
+.diffDpartment{
+	width: 100%;
+	text-align: center;
+	padding-top: 14px;
+	padding-bottom: 14px
+}
+.diffDpartment button{
+	float: left;
+	margin-right: 2em
+}
