--- a/template/menu.html
+++ b/template/menu.html
@@ -14,8 +14,9 @@
 				<li style="display:none"><a href="/platform/checkInit" title="初始化" >初始化</a></li>
 				<li><a href="/platform/addSiteInfo" title="场地信息">场地信息</a></li>
 				<li><a href="/platform/addjobs" title="职位相关">职位相关</a></li>
-				<li><a href="/platform/LookTest" title="查看测试人员">查看测试人员</a></li>
+				<!-- <li><a href="/platform/LookTest" title="查看测试人员">查看测试人员</a></li> -->
 				<li><a href="/platform/searchUser" title="寻找用户">查看用户</a></li>
+				<li><a href="/platform/sumUsers" title="用户注册情况统计">用户注册统计</a></li>
 				<li><a href="/platform/liveness" title="教练学员量">教练学员量</a></li>
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
 				<li><a href="/platform/addDriveSchool" title="驾校管理">驾校管理</a></li>
@@ -67,4 +68,4 @@
 		<p class="list-group-item">获取场地信息默认的distance为整个div高度所对应的实际距离</p>
 		<p class="list-group-item">添加图片时选中图片后暂时还显示不出来(需要改进)</p>
 	</div>
-</ui-view>
+</ui-view>+
