--- a/template/phoneByUser.html
+++ b/template/phoneByUser.html
@@ -1,6 +1,6 @@
 <section class="container">
-	<div class="getUser">
-		<form novalidate name="User_form" ng-submit="finaUser()" >
+	<div class="getUser" style="display:none">
+		<form novalidate name="User_form" ng-submit="finaUser()"  >
 			<input class="form-control" style="float:left" placeholder="userPhone" ng-model="user.phone" />
 			<button class="btn btn-default" type="submit"  style="float:left">提交</button>
 		</form>
