--- a/template/useItem.html
+++ b/template/useItem.html
@@ -1,3 +1,4 @@
+<div class="clear"></div>
 <div class="data_detile" >
 	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.id"  ></input>
 	<input type="text" class="btn btn-default fixed_width" style="width:16%" ng-model="user.name" ></input>
