--- a/template/getImUsers.html
+++ b/template/getImUsers.html
@@ -1,8 +1,8 @@
 <div class="container">
-	<button type="button" class="btn btn-default fixed_width" style="width:20%" >用户ID</button>
-	<button type="button" class="btn btn-default fixed_width" style="width:20%">用户名字</button>
+	<button type="button" class="btn btn-default fixed_width" style="width:20%" >审核材料</button>
+	<button type="button" class="btn btn-default fixed_width" style="width:20%">用户ID</button>
 	<button type="button" class="btn btn-default fixed_width" style="width:20%">用户手机号</button>
-	<button type="button" class="btn btn-default fixed_width" style="width:20%">创建日期</button>
+	<button type="button" class="btn btn-default fixed_width" style="width:20%">审核状态</button>
 	<div class="clear"></div>
 	<imuser-list ng-repeat="(key,imuser) in imuserLIst"></imuser-list>
 </div>
