--- a/template/menu.html
+++ b/template/menu.html
@@ -19,8 +19,8 @@
 				<li><a href="/platform/sumUsers" title="用户注册情况统计">用户注册统计</a></li>
 				<li><a href="/platform/liveness" title="教练学员量">教练学员量</a></li>
 				<li><a href="/platform/getImUsers" title="审核用户">审核用户</a></li>
-				<li><a href="/platform/addDriveSchool" title="驾校管理">驾校管理</a></li>
-				<li><a href="/platform/manageUser" title="管理员选项">平台管理员</a></li>
+				<li><a href="/platform/addDriveSchool" title="订单管理">订单管理</a></li>
+				<li><a href="/platform/manageUser" title="提现管理">提现管理</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 		        <li><a ng-href="{{myhref}}"  ng-bind="login" ng-show="loginDetile"></a></li>
